----------
v6.1.4-git
----------

[mms] Fix applying the 'allow_folders' permission.
[mms] Fix canceling/discarding compose message in basic view (Bug #12555).
[mms] Fix updating message index when deleting a message in basic message view
      (Bug #12539).
[mms] 'trailer' hook now has the user's identity and the list of recipients
      passed as parameters.
[mms] Add ability to access all reply methods in smartmobile view.
[mms] Smarter sizing of popup windows in dynamic view.
[mms] Correctly save multipart/related data when saving compose message as a
      draft.
[mms] When checking for newmail in a mailbox, use the total number of recent
      messages seen at any time during the page access (Request #12447).
[mms] Workaround IE8's broken XMLHttpRequest when sending data in dynamic
      compose view (Bug #12474).


------
v6.1.3
------

[mms] Workaround Chrome bug preventing drag/drop of attachments in dynamic
      compose (Bug #12418).
[mms] Better handle transient mail server connection issues in basic and
      minimal views.
[mms] Fix regression of redirect message not working in dynamic view (Bug
      #12417).
[jan] Fix link to setup browser for mailto: protocol.
[mms] Fix uploading attachments on Firefox 22+ in dynamic view.
[mms] Fix image upload dialog in the HTML compose editor.
[mms] Fix purging search previews from browser cache when switching mailboxes
      (Bug #12384).
[mms] Fix parsing signed & encrypted S/MIME messages sent from Outlook
      2007/2010 (Bug #12374).
[mms] Fix updating mailbox list when changing sort direction in search
      mailboxes (Bug #12369).


------
v6.1.2
------

[mms] Fix saving S/MIME certificate to addressbook when message is both signed
      & encrypted (Bug #12354).
[jan] Fix displaying photos in rendered vCard files.
[jan] Fix detecting capability to list users if called via RPC (Bug #12305).
[mms] Clear cached previews in dynamic view when changing or refreshing a
      search mailbox (Bug #12349).