@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Use Horde_Smtp to send messages via SMTP.
 * [mms] Fix applying the &apos;allow_folders&apos; permission.
 * [mms] Fix canceling/discarding compose message in basic view (Bug #12555).
 * [mms] Fix updating message index when deleting a message in basic message view (Bug #12539).
@@ -1145,7 +1146,7 @@
    <package>
     <name>Horde_Core</name>
     <channel>pear.horde.org</channel>
-    <min>2.5.0</min>
+    <min>2.5.7</min>
     <max>3.0.0alpha1</max>
     <exclude>3.0.0alpha1</exclude>
    </package>
@@ -3270,6 +3271,7 @@
    <date>2013-07-16</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Use Horde_Smtp to send messages via SMTP.
 * [mms] Fix applying the &apos;allow_folders&apos; permission.
 * [mms] Fix canceling/discarding compose message in basic view (Bug #12555).
 * [mms] Fix updating message index when deleting a message in basic message view (Bug #12539).
